# succinct_neo

./: .commitlintrc.json  .gitignore  .versionrc.json  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  package-lock.json  package.json  release-please-config.json
.github/workflows/: release-please.yml  rust.yml
src/: lib.rs  traits.rs
src/bit_vec/: mod.rs  slice.rs
src/bit_vec/slice/: mod.rs  trait_impls.rs
src/int_vec/: mod.rs
succinct_neo/: CHANGELOG.md  Cargo.toml
succinct_neo/benches/: bitvec_benchmark.rs  bv_ops_benchmark.rs  flat_popcount_benchmark.rs  intvec_benchmark.rs  rolling_hash_benchmark.rs
succinct_neo/resources/test/: einstein.txt
succinct_neo/src/: lib.rs  traits.rs
succinct_neo/src/bit_vec/: backing.rs  mod.rs  traits.rs
succinct_neo/src/bit_vec/rank_select/: mod.rs  traits.rs
succinct_neo/src/bit_vec/rank_select/flat_popcount/: mod.rs  strats.rs
succinct_neo/src/bit_vec/slice/: mod.rs  slicing.rs  trait_impls.rs
succinct_neo/src/int_vec/: dynamic.rs  fixed.rs  mod.rs  traits.rs
succinct_neo/src/rank_select/: flat_popcount.rs  mod.rs  traits.rs
succinct_neo/src/rank_select/block_tree/: construction.rs  mod.rs
succinct_neo/src/rank_select/block_tree/pointer/: block.rs  construction.rs  mod.rs
succinct_neo/src/rank_select/flat_popcount/: mod.rs  strats.rs
succinct_neo/src/rolling_hash/: cyclic_polynomial.rs  mod.rs  rabin_karp.rs  traits.rs
succinct_neo/src/util/rolling_hash/: cyclic_polynomial.rs  mod.rs  rabin_karp.rs  traits.rs
xtask/: Cargo.toml
xtask/src/: main.rs
