[package]
name = "succinct_neo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Succinct data structures for Rust"
homepage = "https://github.com/Skadic/succinct_neo"
repository = "https://github.com/Skadic/succinct_neo"
readme = "../README.md"
keywords = ["data-structures", "data-structure", "succinct"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
static_assertions = "1.1.0"
paste = "1.0.11"

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"
criterion-perf-events = "0.3.0"

[[bench]]
name = "bv_ops_benchmark"
harness = false

[[bench]]
name = "flat_popcount_benchmark"
harness = false
